--- a/index.html
+++ b/index.html
@@ -37,82 +37,80 @@
     <!-- Aside -->
     <aside class="uk-width-1-2@s">
       <ul class="gallery">
-    <li><img src="img/dresses/_1.jpg"/></li>
-    <li><img src="img/dresses/_2.jpg"/></li>
-    <li><img src="_3.jpg"/></li>
-    <li><img src="img/dresses/_4.jpg"/></li>
-    <li><img src="_5.jpg"/></li>
-	 <li><img src="img/dresses/_6.jpg"/></li>
-    <li><img src="_7.jpg"/></li>
-    <li><img src="img/dresses/_8.jpg"/></li>
-    <li><img src="img/dresses/_9.jpg"/></li>
-    <li><img src="img/dresses/_10.jpg"/></li>
-	<li><img src="_11.jpg"/></li>
-    <li><img src="img/dresses/_12.jpg"/></li>
-    <li><img src="img/dresses/_13.jpg"/></li>
-    <li><img src="_14.jpg"/></li>
-    <li><img src="img/dresses/_15.jpg"/></li>
-	<li><img src="_16.jpg"/></li>
-    <li><img src="img/dresses/_17.jpg"/></li>
-    <li><img src="_18.jpg"/></li>
-    <li><img src="img/dresses/_19.jpg"/></li>
-    <li><img src="img/dresses/_20.jpg"/></li>
-	<li><img src="_21.jpg"/></li>
-    <li><img src="img/dresses/_22.jpg"/></li>
-    <li><img src="img/dresses/_22.jpg"/></li>
-    <li><img src="img/dresses/_24.jpg"/></li>
-    <li><img src="_25.jpg"/></li>
-	<li><img src="img/dresses/_26.jpg"/></li>
-    <li><img src="img/dresses/_27.jpg"/></li>
-    
+		 <li><img src="img/dresses/_1.jpg"/></li>
+		 <li><img src="img/dresses/_2.jpg"/></li>
+		 <li><img src="_3.jpg"/></li>
+		 <li><img src="img/dresses/_4.jpg"/></li>
+		 <li><img src="_5.jpg"/></li>
+		 <li><img src="img/dresses/_6.jpg"/></li>
+		 <li><img src="_7.jpg"/></li>
+		 <li><img src="img/dresses/_8.jpg"/></li>
+		 <li><img src="img/dresses/_9.jpg"/></li>
+		 <li><img src="img/dresses/_10.jpg"/></li>
+		 <li><img src="_11.jpg"/></li>
+		 <li><img src="img/dresses/_12.jpg"/></li>
+		 <li><img src="img/dresses/_13.jpg"/></li>
+		 <li><img src="_14.jpg"/></li>
+		 <li><img src="img/dresses/_15.jpg"/></li>
+		 <li><img src="_16.jpg"/></li>
+		 <li><img src="img/dresses/_17.jpg"/></li>
+		 <li><img src="_18.jpg"/></li>
+		 <li><img src="img/dresses/_19.jpg"/></li>
+		 <li><img src="img/dresses/_20.jpg"/></li>
+		 <li><img src="_21.jpg"/></li>
+		 <li><img src="img/dresses/_22.jpg"/></li>
+		 <li><img src="img/dresses/_22.jpg"/></li>
+		 <li><img src="img/dresses/_24.jpg"/></li>
+		 <li><img src="_25.jpg"/></li>
+		 <li><img src="img/dresses/_26.jpg"/></li>
+		 <li><img src="img/dresses/_27.jpg"/></li>
+    	</ul>
     </aside>
 	  
 	  <!-- Content -->
     <article class="uk-width-1-3@s">
-      <p>Summary:<br>Two things about Jane: she never says no to her friends (she's been a bridesmaid 27 times and selflessly plans friends' weddings), and she's in love with her boss, George, nurturing dreams of a lovely, romantic wedding of her own. She meets Kevin, a cynical writer who finds her attractive, and that same week her flirtatious younger sister Tess comes to town. Jane silently watches George fall for Tess, a manipulative pretender. Worse, Jane may be called upon to plan their wedding. Meanwhile, Kevin tries to get Jane's attention and has an idea that may advance his career. Can Jane uncork her feelings?</p>
+      <h2>27 Dresses</h2>
+		<sub>PG-13 | 1h 51min | Comedy, Romance | 18 January 2008 (USA)</sub>
+		<p>Director: Anne Fletcher<br>
+			Writer: Aline Brosh McKenna</>
+		<p>Summary:<br>Two things about Jane: she never says no to her friends (she's been a bridesmaid 27 times and selflessly plans friends' weddings), and she's in love with her boss, George, nurturing dreams of a lovely, romantic wedding of her own. She meets Kevin, a cynical writer who finds her attractive, and that same week her flirtatious younger sister Tess comes to town. Jane silently watches George fall for Tess, a manipulative pretender. Worse, Jane may be called upon to plan their wedding. Meanwhile, Kevin tries to get Jane's attention and has an idea that may advance his career. Can Jane uncork her feelings?</p>
     </article>
 		 
-	
-	<div uk-grid>
+	<hr class="cast">
 		<h1>Cast</h1>
-		<div class="column_one uk-width-1-2">
-			  <div class="bio">
-					<img src="https://images-na.ssl-images-amazon.com/images/M/MV5BNTM0NDEwMjA1MV5BMl5BanBnXkFtZTcwMzQxMDI3Mg@@._V1_UY317_CR0,0,214,317_AL_.jpg" alt="">
-					<h3>Katherine Heigl</h3>
-					<p>Jane</p>
-			  </div>
-			  <div class="bio">
-				  <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMjA4ODAwMjIwOV5BMl5BanBnXkFtZTcwMzI2NDA2OA@@._V1_UY317_CR50,0,214,317_AL_.jpg" alt="">
-				  <h3>Malin Akerman</h3>
-				  <p>Tess</p>
-			  </div>
-			  <div class="bio">
-				  <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTg5MTAyMzMzMl5BMl5BanBnXkFtZTcwMDY2Mzc2NQ@@._V1_UY317_CR0,0,214,317_AL_.jpg" alt="">
-				  <h3>Judy Greer</h3>
-				  <p>Casey</p>
-			  </div>
-		 </div>
-		 <div class="column_two uk-width-1-2">
-			  <div class="bio">
-					<img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTQyOTUzNjc0MF5BMl5BanBnXkFtZTcwNTYyMDYzMw@@._V1_UX214_CR0,0,214,317_AL_.jpg" alt="">
-					<h3>James Marsden</h3>
-					<p>Kevin</p>
-			  </div>
-			  <div class="bio">
-					<img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTY1MTU0NjIyMl5BMl5BanBnXkFtZTcwODc3OTc1MQ@@._V1_UX214_CR0,0,214,317_AL_.jpg" alt="">
-					<h3>Edward Burns</h3>
-					<p>George</p>
-			  </div>
-			  <div class="bio">
-					<img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTIxNTA5NjE3MV5BMl5BanBnXkFtZTYwMjI2MDc3._V1_UY317_CR19,0,214,317_AL_.jpg" alt="">
-					<h3>
-						 Brian Kerwin
-					</h3>
-					<p>Hal</p>
-			  </div>
-		 </div>
-	</div>	
-  
+		<div uk-grid class="uk-column-1-3">
+				  <div class="bio uk-transition-toggle">
+						<img src="https://images-na.ssl-images-amazon.com/images/M/MV5BNTM0NDEwMjA1MV5BMl5BanBnXkFtZTcwMzQxMDI3Mg@@._V1_UY317_CR0,0,214,317_AL_.jpg" alt="">
+						<p class="uk-transition-slide-bottom">Jane</p>
+					  	<h3>Katherine Heigl</h3>
+				  </div>
+				  <div class="bio uk-transition-toggle">
+					  <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMjA4ODAwMjIwOV5BMl5BanBnXkFtZTcwMzI2NDA2OA@@._V1_UY317_CR50,0,214,317_AL_.jpg" alt="">
+					  <p class="uk-transition-slide-bottom">Tess</p>
+					  <h3>Malin Akerman</h3>
+				  </div>
+				  <div class="bio uk-transition-toggle">
+					  <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTg5MTAyMzMzMl5BMl5BanBnXkFtZTcwMDY2Mzc2NQ@@._V1_UY317_CR0,0,214,317_AL_.jpg" alt="">
+					  <p class="uk-transition-slide-bottom">Casey</p>
+					  <h3>Judy Greer</h3>
+				  </div>
+				  <div class="bio uk-transition-toggle">
+						<img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTQyOTUzNjc0MF5BMl5BanBnXkFtZTcwNTYyMDYzMw@@._V1_UX214_CR0,0,214,317_AL_.jpg" alt="">
+					  <p class="uk-transition-slide-bottom">Kevin</p>	
+					  <h3>James Marsden</h3>
+				  </div>
+				  <div class="bio uk-transition-toggle">
+						<img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTY1MTU0NjIyMl5BMl5BanBnXkFtZTcwODc3OTc1MQ@@._V1_UX214_CR0,0,214,317_AL_.jpg" alt="">
+						<p class="uk-transition-slide-bottom">George</p>
+					   <h3>Edward Burns</h3>
+				  </div>
+				  <div class="bio uk-transition-toggle">
+						<img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTIxNTA5NjE3MV5BMl5BanBnXkFtZTYwMjI2MDc3._V1_UY317_CR19,0,214,317_AL_.jpg" alt="">
+						<p class="uk-transition-slide-bottom">Hal</p>
+					   <h3>Brian Kerwin</h3>
+				  </div>
+		</div>	
+   </hr>
   <!-- Footer -->
     <footer class="uk-width-1-1">
       <a src="http://www.imdb.com/title/tt0988595/?ref_=nv_sr_1">20th Century Fox Copyright 2008</a>
