--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </video>
 
     <!-- Aside -->
-    <aside class="uk-width-1-2@s">
+    <aside class="uk-width-1-2">
       <ul class="gallery">
 		 <li><img src="img/dresses/_1.jpg"/></li>
 		 <li><img src="img/dresses/_2.jpg"/></li>
@@ -68,12 +68,12 @@
     </aside>
 	  
 	  <!-- Content -->
-    <article class="uk-width-1-3@s">
+    <article class="uk-width-1-2">
       <h2>27 Dresses</h2>
-		<sub>PG-13 | 1h 51min | Comedy, Romance | 18 January 2008 (USA)</sub>
-		<p>Director: Anne Fletcher<br>
-			Writer: Aline Brosh McKenna</>
-		<p>Summary:<br>Two things about Jane: she never says no to her friends (she's been a bridesmaid 27 times and selflessly plans friends' weddings), and she's in love with her boss, George, nurturing dreams of a lovely, romantic wedding of her own. She meets Kevin, a cynical writer who finds her attractive, and that same week her flirtatious younger sister Tess comes to town. Jane silently watches George fall for Tess, a manipulative pretender. Worse, Jane may be called upon to plan their wedding. Meanwhile, Kevin tries to get Jane's attention and has an idea that may advance his career. Can Jane uncork her feelings?</p>
+		<p class="creator">Director: Anne Fletcher<br>
+			Writer: Aline Brosh McKenna</p> 
+		<p class="info">PG-13 | Comedy, Romance <br> 1h 51min | 18 January 2008 (USA)</p>
+		<p class="summary">Summary:<br>Two things about Jane: she never says no to her friends (she's been a bridesmaid 27 times and selflessly plans friends' weddings), and she's in love with her boss, George, nurturing dreams of a lovely, romantic wedding of her own. She meets Kevin, a cynical writer who finds her attractive, and that same week her flirtatious younger sister Tess comes to town. Jane silently watches George fall for Tess, a manipulative pretender. Worse, Jane may be called upon to plan their wedding. Meanwhile, Kevin tries to get Jane's attention and has an idea that may advance his career. Can Jane uncork her feelings?</p>
     </article>
 		 
 	<hr class="cast">
