--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<p class="summary">Summary:<br>Two things about Jane: she never says no to her friends (she's been a bridesmaid 27 times and selflessly plans friends' weddings), and she's in love with her boss, George, nurturing dreams of a lovely, romantic wedding of her own. She meets Kevin, a cynical writer who finds her attractive, and that same week her flirtatious younger sister Tess comes to town. Jane silently watches George fall for Tess, a manipulative pretender. Worse, Jane may be called upon to plan their wedding. Meanwhile, Kevin tries to get Jane's attention and has an idea that may advance his career. Can Jane uncork her feelings?</p>
     </article>
 	
-	 <hr class="cast uk-width-1-2">
+	 <hr class="cast uk-align-left">
 	  	<div class="uk-column-1-3">
 	  		<h1 class="uk-column-span">Cast</h1>
 			<div class="bio uk-transition-toggle">
@@ -112,7 +112,7 @@
 		</div>	
    </hr>
 	
-   <ul class="last uk-width-1-3">
+   <ul class="last uk-align-left uk-align-right">
 		 	<li><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1490417/last.jpg"/></li>
 	</ul>
 	
